Telas para recuperar senha quase finalizadas

--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -67,7 +67,7 @@
       <a id="Termos">Termos e políticas de dados.</a>
     </div>
 
-    <ion-button id="btnCadastrarConta" expand="full" shape="round" (click)="btnContinuar()">
+    <ion-button type="submit" id="btnCadastrarConta" expand="full" shape="round" (click)="btnContinuar()">
       Continuar
     </ion-button>
 
