--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -31,15 +31,15 @@
         </ion-item>
 
     <div id="divEsqueceuSenha">
-      <a>Esqueceu sua senha?</a>
+      <a (click)="btnRecuperarSenha()">Esqueceu sua senha?</a>
     </div>
 
-    <ion-button id="btnEntrarConta" expand="full" shape="round">
+    <ion-button type="submit" id="btnEntrarConta" expand="full" shape="round">
       Entrar
     </ion-button>
 
     <div id="divCriarConta">
-      <label>Não tem conta?&nbsp;</label>
+      <ion-label>Não tem conta?&nbsp;</ion-label>
       <a>Cadastre-se</a>
     </div>
 
