--- a/src/app/esqueceu-senha/esqueceu-senha.page.scss
+++ b/src/app/esqueceu-senha/esqueceu-senha.page.scss
@@ -34,11 +34,8 @@ ion-content{
   --ion-background-color: -webkit-linear-gradient(top,  #00f9bb 4%,#0afbc1 24%);
   --ion-background-color: linear-gradient(to bottom,  #00f9bb 4%,#0afbc1 24%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00f9bb', endColorstr='#0afbc1',GradientType=0 );
-  height: 100%;
-}
-
-*{
   font-family: "Segoe UI";
+  height: 100%;
 }
 
 /*============================================================================================================*/
@@ -88,31 +85,6 @@ h3{
   color: #707070;
 }
 
-.stepComplete{
-  margin-left: 10%;
-  margin-right: 10%;
-  position: relative;
-  border: 1px solid #00f9bb;
-  border-radius: 20px;
-  width: 15px;
-  height: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: white;
-  color: #00f9bb;
-}
-
-.bulletProgressComplete::after{
-  content: '';
-  position: absolute;
-  width: 63px;
-  height: 1px;
-  background: #00f9bb;
-  left: 14px;
-  bottom: 6px;
-}
-
 .bulletProgress::after{
   content: '';
   position: absolute;
@@ -130,71 +102,23 @@ h3{
 
 /*============================================================================================================*/
 
-.divContexto{
-  display: flex;
-  justify-content: left;
-  color:black;
-  margin-top: 8%;
-}
-
-.divContexto h4{
-  font-size: 18px;
-  line-height: 1.5;
-}
-
-/*============================================================================================================*/
-
-.lugares{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.lugares ion-item{
-  font-size: 18px;
+ion-item{
+  font-size: 14px;
   color: black;
   --border-color: #707070;
   --background: white;
   --min-height: 16px;
-  padding: 0px 10px 0px 10px;
-  width: 80%;
-}
-
-.lugares ion-select{
-  font-size: 14px;
-  font-weight: bold;
-  padding-top: 10px;
 }
 
 /*============================================================================================================*/
 
-.divRadio{
-  display: flex;
-  margin-top: 5%;
-  font-size: 12px;
-}
-
-.divRadio ion-radio {
-  top: 15%;
-  width: 16px;
-  height: 16px;
-  --border-radius: 4px;
-  --inner-border-radius: 2px;
-}
-
-.divRadio ion-label{
-  padding-left: 5px;
-
-}
-
-/*============================================================================================================*/
-
-#btnCadastrarConta{
+#btnEnviar{
   height: 30px;
   font-size: 14px;
   text-transform: none;
   font-weight: bold;
   color: white;
   --background: #00f9bb;
+  font-family: "Segoe UI";
   margin-top: 10%;
 }
