--- a/src/app/ultimo-passo/ultimo-passo.page.html
+++ b/src/app/ultimo-passo/ultimo-passo.page.html
@@ -49,15 +49,15 @@
 
     <div class="lugares">
       <ion-item lines="full">
-        <ion-label>País</ion-label>
+        <ion-label position="stacked">País:</ion-label>
         <ion-select>
-
+          <ion-select-option>Brasil</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item lines="full">
-        <ion-label>Cidade</ion-label>
+        <ion-label position="stacked">Cidade:</ion-label>
         <ion-select>
-
+          <ion-select-option>São Paulo</ion-select-option>
         </ion-select>
       </ion-item>
     </div>
@@ -75,15 +75,15 @@
 
     <div class="lugares">
       <ion-item lines="full">
-        <ion-label>País</ion-label>
+        <ion-label position="stacked">País:</ion-label>
         <ion-select>
-
+          <ion-select-option>Brasil</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item lines="full">
-        <ion-label>Cidade</ion-label>
+        <ion-label position="stacked">Cidade:</ion-label>
         <ion-select>
-
+          <ion-select-option>São Paulo</ion-select-option>
         </ion-select>
       </ion-item>
     </div>
@@ -94,6 +94,10 @@
         <ion-label>Prefiro não dizer</ion-label>
       </ion-radio-group>
     </div>
+
+    <ion-button type="submit" id="btnCadastrarConta" expand="full" shape="round">
+      Continuar
+    </ion-button>
 
   </div>
 </ion-content>
