--- a/src/app/redefinir-senha/redefinir-senha.page.html
+++ b/src/app/redefinir-senha/redefinir-senha.page.html
@@ -15,10 +15,9 @@
 </ion-header>
 
 <ion-content>
-
   <div id="divPrincipal">
 
-    <h3>Recuperar senha</h3>
+    <h3>Recuperar Senha</h3>
     <p id="Descricao">preencha o campo para recuperar sua senha</p>
 
     <div id="stepProgressBar">
@@ -29,8 +28,8 @@
         </div>
       </div>
 
-      <div class="step">
-        <div class="bulletProgress">
+      <div class="stepComplete">
+        <div class="bulletProgressComplete">
           <ion-icon name="checkmark-outline" class="check"></ion-icon>
         </div>
       </div>
@@ -42,27 +41,16 @@
       </div>
 
     </div>
+    <ion-item lines="full">
+      <ion-label position="floating">Senha</ion-label>
+      <ion-input type="password" placeholder="Digite aqui a nova senha" required></ion-input>
+    </ion-item>
+    <ion-item lines="full">
+      <ion-label position="floating">Confirmar senha</ion-label>
+      <ion-input type="password" placeholder="Confirme aqui a nova senha" required></ion-input>
+    </ion-item>
 
-    <div id="divContexto">
-      <h4>Digite o código enviado na sua caixa de email</h4>
-    </div>
-
-    <div id="divCodigo">
-      <ion-item lines="full">
-        <ion-input type="text" placeholder="0" maxlength="1" required></ion-input>
-      </ion-item>
-      <ion-item lines="full">
-        <ion-input type="text" placeholder="0" maxlength="1" required></ion-input>
-      </ion-item>
-      <ion-item lines="full">
-        <ion-input type="text" placeholder="0" maxlength="1" required></ion-input>
-      </ion-item>
-      <ion-item lines="full">
-        <ion-input type="text" placeholder="0" maxlength="1" required></ion-input>
-      </ion-item>
-    </div>
-
-    <ion-button type="submit" id="btnCadastrarConta" expand="full" shape="round" (click)="btnContinuar()">
+    <ion-button type="submit" id="btnCadastrarConta" expand="full" shape="round">
       Continuar
     </ion-button>
 
@@ -74,4 +62,3 @@
 
   </div>
 </ion-content>
-
