--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,6 +1,7 @@
 *{
   padding: 0;
   margin: 0;
+  font-family: "Segoe UI";
 }
 
 ion-header{
@@ -34,7 +35,6 @@ ion-content{
   --ion-background-color: -webkit-linear-gradient(top,  #00f9bb 4%,#0afbc1 24%);
   --ion-background-color: linear-gradient(to bottom,  #00f9bb 4%,#0afbc1 24%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00f9bb', endColorstr='#0afbc1',GradientType=0 );
-  font-family: "Segoe UI";
   height: 100%;
 }
 
@@ -81,9 +81,9 @@ ion-item{
 /*============================================================================================================*/
 
 #divEsqueceuSenha{
+  display: flex;
+  float: right;
   margin-top: 3%;
-  margin-bottom: 8%;
-  float: right; // conteudo para direita
   text-decoration: underline;
   font-size: 12px;
   font-weight: bold;
@@ -96,19 +96,19 @@ ion-item{
 /*============================================================================================================*/
 
 #btnEntrarConta{
+  margin-top: 18%;
   height: 30px;
   font-size: 14px;
   text-transform: none;
   font-weight: bold;
   color: white;
-  font-family: "Segoe UI";
   --background: #00f9bb;
 }
 
 /*============================================================================================================*/
 
 #divCriarConta{
-  margin-top: 24%;
+  margin-top: 9%;
   margin-bottom: 6%;
   color:black;
   font-size: 12px;
