checkbox na tela de ultimo passo

--- a/src/app/ultimo-passo/ultimo-passo.page.html
+++ b/src/app/ultimo-passo/ultimo-passo.page.html
@@ -62,11 +62,9 @@
       </ion-item>
     </div>
 
-    <div class="divRadio">
-      <ion-radio-group  allow-empty-selection>
-        <ion-radio></ion-radio>
-        <ion-label>Prefiro não dizer</ion-label>
-      </ion-radio-group>
+    <div class="divCheck">
+      <ion-checkbox></ion-checkbox>
+      <ion-label>Prefiro não dizer</ion-label>
     </div>
 
     <div class="divContexto">
@@ -88,11 +86,9 @@
       </ion-item>
     </div>
 
-    <div class="divRadio">
-      <ion-radio-group  allow-empty-selection>
-        <ion-radio></ion-radio>
-        <ion-label>Prefiro não dizer</ion-label>
-      </ion-radio-group>
+    <div class="divCheck">
+      <ion-checkbox></ion-checkbox>
+      <ion-label>Prefiro não dizer</ion-label>
     </div>
 
     <ion-button type="submit" id="btnCadastrarConta" expand="full" shape="round">
