--- a/src/app/ultimo-passo/ultimo-passo.page.scss
+++ b/src/app/ultimo-passo/ultimo-passo.page.scss
@@ -165,21 +165,22 @@ h3{
 
 /*============================================================================================================*/
 
-.divRadio{
+.divCheck{
   display: flex;
   margin-top: 5%;
   font-size: 12px;
 }
 
-.divRadio ion-radio {
+.divCheck ion-checkbox {
   top: 15%;
   width: 16px;
   height: 16px;
+  --border-color: #707070;
   --border-radius: 4px;
-  --inner-border-radius: 2px;
+  --background: white;
 }
 
-.divRadio ion-label{
+.divCheck ion-label{
   padding-left: 5px;
 
 }
