--- a/src/app/ultimo-passo/ultimo-passo.page.html
+++ b/src/app/ultimo-passo/ultimo-passo.page.html
@@ -49,13 +49,13 @@
 
     <div class="lugares">
       <ion-item lines="full">
-        <ion-label position="stacked">País:</ion-label>
+        <ion-label position="stacked">País</ion-label>
         <ion-select>
           <ion-select-option>Brasil</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item lines="full">
-        <ion-label position="stacked">Cidade:</ion-label>
+        <ion-label position="stacked">Cidade</ion-label>
         <ion-select>
           <ion-select-option>São Paulo</ion-select-option>
         </ion-select>
@@ -73,13 +73,13 @@
 
     <div class="lugares">
       <ion-item lines="full">
-        <ion-label position="stacked">País:</ion-label>
+        <ion-label position="stacked">País</ion-label>
         <ion-select>
           <ion-select-option>Brasil</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item lines="full">
-        <ion-label position="stacked">Cidade:</ion-label>
+        <ion-label position="stacked">Cidade</ion-label>
         <ion-select>
           <ion-select-option>São Paulo</ion-select-option>
         </ion-select>
