--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,50 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu menuId="main-menu" content-id="main">
+    <ion-header>
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>
+            Menu
+          </ion-title>
+        </ion-toolbar>
+      </ion-header>
+    </ion-header>
+    <ion-content>
+
+      <ion-list>
+
+        <ion-menu-toggle>
+          <ion-item routerLink="/tabs" routerLinkActive="active-item">
+            <ion-icon name="home-outline" slot="start"></ion-icon>
+            <ion-label>Home</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+
+        <ion-menu-toggle>
+          <ion-item routerLink="/perfil" routerLinkActive="active-item">
+            <ion-icon name="person-outline" slot="start"></ion-icon>
+            <ion-label>Perfil</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+
+        <ion-menu-toggle>
+          <ion-item routerLink="/viagens" routerLinkActive="active-item">
+            <ion-icon name="location-outline" slot="start"></ion-icon>
+            <ion-label>Viagens</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+
+        <ion-menu-toggle>
+          <ion-item routerLink="/configuracoes" routerLinkActive="active-item">
+            <ion-icon name="settings-outline" slot="start"></ion-icon>
+            <ion-label>Configurações</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+
+      </ion-list>
+
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
+
