design do post iniciado

--- a/src/app/tabs/tab1/tab1.page.html
+++ b/src/app/tabs/tab1/tab1.page.html
@@ -1,9 +1,21 @@
 <ion-content>
-  <ion-card>
-    <ion-item>
-      <ion-label>
-        Home
-      </ion-label>
-    </ion-item>
+  <ion-card class="post">
+    <ion-card-content class="contentPost">
+      <div class=divSuperior>
+
+        <div class="divAvatar">
+          <ion-avatar></ion-avatar>
+        </div>
+        <div class="divContexto">
+          <p>Nome&nbsp;</p>
+          <p>País&nbsp;</p>
+          <p>Cidade</p>
+        </div>
+        <div class="divTempo">
+          <p>X dias atrás</p>
+        </div>
+
+      </div>
+    </ion-card-content>
   </ion-card>
 </ion-content>
