--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,6 +74,7 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+  --ion-card-color: #000000;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -232,5 +233,7 @@
     --ion-tab-bar-background: #1f1f1f;
 
     --ion-card-background: #1e1e1e;
+
+    --ion-card-color: #ffff;
   }
 }
