Continuação do design do post

--- a/src/app/tabs/tab1/tab1.page.html
+++ b/src/app/tabs/tab1/tab1.page.html
@@ -16,6 +16,29 @@
         </div>
 
       </div>
+
+      <div class="divSinopse">
+        <p class="sinopse">
+        Viajei para São Paulo e foi incrível!!
+        Essa foi minha primeira viagem para o Brasil, e foi incrível
+        o povo brasileiro é muito acolhedor e a comida brasileira
+        é a melhor.
+        </p>
+      </div>
+
+        <div class="divImgMaior">
+          <img>
+        </div >
+
+      <div class="divMenor">
+        <div class="divImgMenor">
+          <img>
+        </div>
+        <div class="divImgMenor">
+          <img>
+        </div>
+      </div>
+
     </ion-card-content>
   </ion-card>
 </ion-content>
