--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -183,6 +183,8 @@
     --ion-item-background: #000000;
 
     --ion-card-background: #1c1c1d;
+
+    --ion-card-color: #ffff;
   }
 
   .ios ion-modal {
