front-end do post 98% finalizado

--- a/src/app/tabs/tab1/tab1.page.html
+++ b/src/app/tabs/tab1/tab1.page.html
@@ -7,9 +7,9 @@
           <ion-avatar></ion-avatar>
         </div>
         <div class="divContexto">
-          <p>Nome&nbsp;</p>
-          <p>País&nbsp;</p>
-          <p>Cidade</p>
+          <p>Matheus Almeida&nbsp;</p>
+          <p>Brasil&nbsp;</p>
+          <p>São Paulo</p>
         </div>
         <div class="divTempo">
           <p>X dias atrás</p>
@@ -18,7 +18,7 @@
       </div>
 
       <div class="divSinopse">
-        <p class="sinopse">
+        <p>
         Viajei para São Paulo e foi incrível!!
         Essa foi minha primeira viagem para o Brasil, e foi incrível
         o povo brasileiro é muito acolhedor e a comida brasileira
@@ -26,17 +26,45 @@
         </p>
       </div>
 
-        <div class="divImgMaior">
-          <img>
-        </div >
+      <div class="divImagens">
+        <div class="divEsquerda"></div>
+        <div class="verticalLine"></div>
 
-      <div class="divMenor">
-        <div class="divImgMenor">
-          <img>
+        <div class="divDireita">
+          <div class="divImgMenor"></div>
+          <div class="horizontalLine"></div>
+          <div class="divImgMenor"></div>
         </div>
-        <div class="divImgMenor">
-          <img>
+      </div>
+
+      <div class="divVerPubli">
+        <ion-button shape="round" fill="outline">
+          Ver Publicação
+        </ion-button>
+      </div>
+
+      <div class="divRelevancia">
+
+        <div class="divStats">
+          <ion-icon name="heart-outline"></ion-icon>
+          <ion-label>28</ion-label>
         </div>
+
+        <div class="divStats">
+          <ion-icon name="star-outline"></ion-icon>
+          <ion-label>4.2</ion-label>
+        </div>
+
+        <div class="divStats">
+          <ion-icon name="eye-outline"></ion-icon>
+          <ion-label>56</ion-label>
+        </div>
+
+        <div class="divStats">
+          <ion-icon name="chatbubbles-outline"></ion-icon>
+        <ion-label>32</ion-label>
+        </div>
+
       </div>
 
     </ion-card-content>
