--- a/src/app/tabs/tab1/tab1.page.html
+++ b/src/app/tabs/tab1/tab1.page.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="divStats">
-          <ion-icon name="chatbubbles-outline"></ion-icon>
+          <ion-icon name="chatbubble-outline"></ion-icon>
         <ion-label>32</ion-label>
         </div>
 
