--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -77,13 +77,13 @@
   --ion-card-color: #000000;
 }
 
-@media (prefers-color-scheme: dark) {
+//@media (prefers-color-scheme: dark) {
   /*
    * Dark Colors
    * -------------------------------------------
    */
 
-  body {
+  body[color-theme="dark"] {
     --ion-color-primary: #428cff;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
@@ -153,7 +153,7 @@
    * -------------------------------------------
    */
 
-  .ios body {
+  .ios body[color-theme="dark"] {
     --ion-background-color: #000000;
     --ion-background-color-rgb: 0,0,0;
 
@@ -199,7 +199,7 @@
    * -------------------------------------------
    */
 
-  .md body {
+  .md body[color-theme="dark"]{
     --ion-background-color: #121212;
     --ion-background-color-rgb: 18,18,18;
 
@@ -238,4 +238,4 @@
 
     --ion-card-color: #ffff;
   }
-}
+//}
