--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,6 +41,12 @@
           </ion-item>
         </ion-menu-toggle>
 
+          <ion-item>
+            <ion-icon name="moon-outline" slot="start"></ion-icon>
+            <ion-label>Modo noturno</ion-label>
+            <ion-toggle slot="end" (ionChange)='toggleTema($event)'></ion-toggle>
+          </ion-item>
+
       </ion-list>
 
     </ion-content>
