--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,9 +1,24 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Principal</ion-title>
-    <ion-buttons slot="start">
-      <ion-menu-button menu="main-menu"></ion-menu-button>
-    </ion-buttons>
+
+    <div class="divAjuste">
+      <ion-buttons>
+        <ion-menu-button menu="main-menu"></ion-menu-button>
+      </ion-buttons>
+
+      <div class="divTitle">
+        <ion-title>travel</ion-title>
+        <ion-icon src= "/assets/logoprincipal.svg" id="logoPrincipal"></ion-icon>
+      </div>
+
+      <ion-buttons>
+        <ion-button>
+          <ion-icon slot="icon-only" name="ellipsis-horizontal"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+
+    </div>
+
   </ion-toolbar>
 </ion-header>
 
@@ -11,19 +26,19 @@
 
   <ion-tabs>
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="tab1">
+      <ion-tab-button tab="tab1" class="tabMenor">
         <ion-icon name="home-outline"></ion-icon>
       </ion-tab-button>
-      <ion-tab-button tab="tab2">
+      <ion-tab-button tab="tab2" class="tabMenor">
         <ion-icon name="flame-outline"></ion-icon>
       </ion-tab-button>
-      <ion-tab-button tab="tab3">
+      <ion-tab-button tab="tab3" class="tabMaior">
         <ion-icon name="add-circle-outline"></ion-icon>
       </ion-tab-button>
-      <ion-tab-button tab="tab4">
+      <ion-tab-button tab="tab4" class="tabMenor">
         <ion-icon name="notifications-outline"></ion-icon>
       </ion-tab-button>
-      <ion-tab-button tab="tab5">
+      <ion-tab-button tab="tab5" class="tabMenor">
         <ion-icon name="search-outline"></ion-icon>
       </ion-tab-button>
     </ion-tab-bar>
