proporções das imagens ajustadas e botão de add quase finalizado

--- a/src/app/tabs/tab1/tab1.page.html
+++ b/src/app/tabs/tab1/tab1.page.html
@@ -4,12 +4,12 @@
       <div class=divSuperior>
 
         <div class="divAvatar">
-          <ion-avatar></ion-avatar>
+          <ion-avatar> <img src="/assets/jesse.jpg"> </ion-avatar>
         </div>
         <div class="divContexto">
-          <p>Matheus Almeida&nbsp;</p>
-          <p>Brasil&nbsp;</p>
-          <p>São Paulo</p>
+          <p>Jesse Pinkman&nbsp;-&nbsp;</p>
+          <p>França&nbsp;-&nbsp;</p>
+          <p>París</p>
         </div>
         <div class="divTempo">
           <p>X dias atrás</p>
@@ -20,20 +20,21 @@
       <div class="divSinopse">
         <p>
         Viajei para São Paulo e foi incrível!!
-        Essa foi minha primeira viagem para o Brasil, e foi incrível
-        o povo brasileiro é muito acolhedor e a comida brasileira
+        Essa foi minha primeira viagem para a França, e foi incrível.
+        O povo francês é muito acolhedor e a comida francesa
         é a melhor.
         </p>
       </div>
 
       <div class="divImagens">
-        <div class="divEsquerda"></div>
+        <img class="divEsquerda" src="/assets/torre.jpg">
         <div class="verticalLine"></div>
 
         <div class="divDireita">
-          <div class="divImgMenor"></div>
+          <img class="divImgMenor" src="/assets/monument1.jpg">
           <div class="horizontalLine"></div>
-          <div class="divImgMenor"></div>
+          <img class="divImgMenor" src="/assets/monument2.jpg">
+
         </div>
       </div>
 
@@ -69,4 +70,5 @@
 
     </ion-card-content>
   </ion-card>
+
 </ion-content>
