--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -32,9 +32,13 @@
       <ion-tab-button tab="tab2" class="tabMenor">
         <ion-icon name="flame-outline"></ion-icon>
       </ion-tab-button>
-      <ion-tab-button tab="tab3" class="tabMaior">
-        <ion-icon name="add-circle-outline"></ion-icon>
-      </ion-tab-button>
+
+      <ion-card class="tabMaior">
+        <ion-tab-button tab="tab3">
+          <ion-icon name="add-outline"></ion-icon>
+        </ion-tab-button>
+      </ion-card>
+
       <ion-tab-button tab="tab4" class="tabMenor">
         <ion-icon name="notifications-outline"></ion-icon>
       </ion-tab-button>
