--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -37,18 +37,20 @@ ion-tab-button{
   --color-selected: #00f9bb;
 }
 
-.tabMenor{
-  --padding-bottom: 12px;
-}
+//.tabMenor{
+  //--padding-bottom: 12px;
+//}
 
 .tabMenor ion-icon{
   font-size: 18px;
 }
 
 .tabMaior{
-  --padding-bottom: 12px;
+  border-radius: 20px;
+  width: 40px;
+  height: 40px;
 }
 
 .tabMaior ion-icon{
-  font-size: 30px;
+  font-size: 18px;
 }
