--- a/src/app/tabs/tab5/tab5.page.html
+++ b/src/app/tabs/tab5/tab5.page.html
@@ -1,9 +1,5 @@
 <ion-content>
-  <ion-card>
-    <ion-item>
-      <ion-label>
-        Pesquisar
-      </ion-label>
-    </ion-item>
-  </ion-card>
+  <ion-toolbar>
+    <ion-searchbar ></ion-searchbar>
+  </ion-toolbar>
 </ion-content>
