--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -7,7 +7,7 @@
       </ion-buttons>
 
       <div class="divTitle">
-        <ion-title>travel</ion-title>
+        <ion-title>Travel</ion-title>
         <ion-icon src= "/assets/logoprincipal.svg" id="logoPrincipal"></ion-icon>
       </div>
 
