Component para o post criado e funcionando

--- a/src/app/tabs/tab1/tab1.page.html
+++ b/src/app/tabs/tab1/tab1.page.html
@@ -1,74 +1,5 @@
 <ion-content>
-  <ion-card class="post">
-    <ion-card-content class="contentPost">
-      <div class=divSuperior>
 
-        <div class="divAvatar">
-          <ion-avatar> <img src="/assets/jesse.jpg"> </ion-avatar>
-        </div>
-        <div class="divContexto">
-          <p>Jesse Pinkman&nbsp;-&nbsp;</p>
-          <p>França&nbsp;-&nbsp;</p>
-          <p>París</p>
-        </div>
-        <div class="divTempo">
-          <p>X dias atrás</p>
-        </div>
-
-      </div>
-
-      <div class="divSinopse">
-        <p>
-        Viajei para São Paulo e foi incrível!!
-        Essa foi minha primeira viagem para a França, e foi incrível.
-        O povo francês é muito acolhedor e a comida francesa
-        é a melhor.
-        </p>
-      </div>
-
-      <div class="divImagens">
-        <img class="divEsquerda" src="/assets/torre.jpg">
-        <div class="verticalLine"></div>
-
-        <div class="divDireita">
-          <img class="divImgMenor" src="/assets/monument1.jpg">
-          <div class="horizontalLine"></div>
-          <img class="divImgMenor" src="/assets/monument2.jpg">
-
-        </div>
-      </div>
-
-      <div class="divVerPubli">
-        <ion-button shape="round" fill="outline">
-          Ver Publicação
-        </ion-button>
-      </div>
-
-      <div class="divRelevancia">
-
-        <div class="divStats">
-          <ion-icon name="heart-outline"></ion-icon>
-          <ion-label>28</ion-label>
-        </div>
-
-        <div class="divStats">
-          <ion-icon name="star-outline"></ion-icon>
-          <ion-label>4.2</ion-label>
-        </div>
-
-        <div class="divStats">
-          <ion-icon name="eye-outline"></ion-icon>
-          <ion-label>56</ion-label>
-        </div>
-
-        <div class="divStats">
-          <ion-icon name="chatbubble-outline"></ion-icon>
-        <ion-label>32</ion-label>
-        </div>
-
-      </div>
-
-    </ion-card-content>
-  </ion-card>
+  <app-post></app-post>
 
 </ion-content>
