ion-badge para notificação adicionado

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,4 +1,4 @@
-<ion-card class="post">
+<ion-card class="post" button="true">
   <ion-card-content class="contentPost">
     <div class=divSuperior>
 
@@ -35,12 +35,6 @@
         <img class="divImgMenor" src="/assets/comida.jpg">
 
       </div>
-    </div>
-
-    <div class="divVerPubli">
-      <ion-button shape="round" fill="outline">
-        Ver Publicação
-      </ion-button>
     </div>
 
     <div class="divRelevancia">
