--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -30,7 +30,7 @@
         <ion-icon name="home-outline"></ion-icon>
       </ion-tab-button>
       <ion-tab-button tab="tab2" class="tabMenor">
-        <ion-icon name="flame-outline"></ion-icon>
+        <ion-icon name="star-outline"></ion-icon>
       </ion-tab-button>
 
       <ion-card class="tabMaior">
@@ -40,6 +40,7 @@
       </ion-card>
 
       <ion-tab-button tab="tab4" class="tabMenor">
+        <ion-badge color="danger">+9</ion-badge>
         <ion-icon name="notifications-outline"></ion-icon>
       </ion-tab-button>
       <ion-tab-button tab="tab5" class="tabMenor">
