--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -75,6 +75,15 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
   --ion-card-color: #000000;
+
+  //========================================Cores Criadas===================================================//
+
+  /** edit **/
+  --ion-color-edit: #ffffff;
+  --ion-color-edit-rgb: 255, 255, 255;
+  --ion-color-edit-contrast: #1f1f1f;
+  --ion-color-edit-contrast-rgb: 31, 31, 31;
+
 }
 
 //@media (prefers-color-scheme: dark) {
@@ -146,6 +155,14 @@
     --ion-color-light-contrast-rgb: 255,255,255;
     --ion-color-light-shade: #1e2023;
     --ion-color-light-tint: #383a3e;
+
+//========================================Cores Criadas===================================================//
+
+    --ion-color-edit: #1f1f1f;
+    --ion-color-edit-rgb: 31, 31, 31;
+    --ion-color-edit-contrast: #ffffff;
+    --ion-color-edit-contrast-rgb: 255, 255, 255;
+
   }
 
   /*
@@ -185,6 +202,11 @@
     --ion-card-background: #1c1c1d;
 
     --ion-card-color: #ffff;
+
+    --ion-color-edit: #000000;
+    --ion-color-edit-rgb: 0, 0, 0;
+    --ion-color-edit-contrast: #ffffff;
+    --ion-color-edit-contrast-rgb: 255, 255, 255;
   }
 
   .ios ion-modal {
