--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,8 +8,79 @@ ion-menu{
   --max-width: 80%;
 }
 
+/*.divHeader{
+  background-color: var(--ion-color-edit);
+  border-bottom: 1px solid var(--ion-color-medium);
+}*/
+
+.divImagens{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 84px;
+}
+
+.imgFundo{
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.divImagens ion-avatar{
+  border: 1px solid white;
+  width: 42px;
+  height: 42px;
+  position: absolute;
+  top: 36px;
+}
+
+.divDados{
+  text-align: center;
+}
+
+.divDados h3{
+  font-size: 16px;
+}
+
+.divDados p{
+  font-size: 10px;
+}
+
+//=============================================================================================================//
+
+.divRelevancia{
+  display: flex;
+  justify-content: center;
+  margin-top: 6px;
+  padding-bottom: 8px;
+}
+
+.divStats{
+  display:flex;
+  justify-content: center;
+  margin-left: 3%;
+  margin-right: 3%;
+  }
+
+.divStats ion-label{
+  font-size: 10px;
+}
+
+.divStats ion-icon{
+  font-size: 12px;
+  padding-right: 2px;
+}
+
+//=============================================================================================================//
+
+ion-list{
+  background: none;
+}
+
 ion-item{
   font-size: 12px;
+  --background: none;
+  --min-height: 40px
 }
 
 ion-item ion-icon{
@@ -33,4 +104,18 @@ ion-toggle{
   --handle-height: 14px;
   --background-checked: #00f1bd54;
   --handle-background-checked: #00f9bb;
+}
+
+//=============================================================================================================//
+
+.divContas{
+  text-align: center;
+  font-size: 10px;
+  padding-top: 6px;
+  line-height: 2;
+  border-top: 1px solid var(--ion-color-medium);
+}
+
+.divContas a{
+  text-decoration: underline;
 }
